--- a/11/11-excercises-p2/11x.html
+++ b/11/11-excercises-p2/11x.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head> 
-    
-    <title>Todo list</title> <!-- sets the text in the tab heading -->
-    <link 
-    rel="stylesheet"
-    href="11-todo-list.css">
+    <title>Exercises-10d</title> <!-- sets the text in the tab heading -->
+    <link rel="stylesheet" href="11x.css">
+
   </head>
   <body> 
     <p> Todo List Practice 1</p>
@@ -29,12 +27,7 @@
     <div class="js-todo-list todo-list-grid"> <!-- 'div' serves as a container (block element with no default styling / padding ), it separates buttons and paragraphs-->
       
     </div> 
-    <script src="11-todo-list.js">
+    <script src="11x.js">
     </script>
   </body>
 </html>
-
-
-
-
-
