--- a/11/11-arrays-loops.html
+++ b/11/11-arrays-loops.html
@@ -113,7 +113,13 @@
       const arrayTest2 = [2, 2, 5];
       console.log(doubleArray(arrayTest1));
       console.log(doubleArray(arrayTest2));
-      
+
+      //test array push
+      const arrayTest3 = [1, 6, 6, 2, 8, 3, 9, 7];
+      console.log(arrayTest3);
+      arrayTest3.push({name: 'Justin'
+      , height: '174 cm'});
+      console.log(arrayTest3);
     </script>
   </body>
 </html>
