--- a/12/todo-list/12-todo-list.html
+++ b/12/todo-list/12-todo-list.html
@@ -20,10 +20,7 @@
         placeholder="yyyy-mm-dd"
         onkeydown="enterKeyDown(event);">
       <button 
-        class="css-add-button"
-        onclick="
-        addTodoList();
-      ">Add</button>
+        class="css-add-button js-add-button">Add</button>
     </div>
 
     <div class="js-todo-list todo-list-grid"> <!-- 'div' serves as a container (block element with no default styling / padding ), it separates buttons and paragraphs-->
